--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ amqp==1.4.9
 anyjson==0.3.3
 astroid==2.3.2
 autopep8==1.4.4
+backcall==0.1.0
 billiard==3.3.0.23
 celery==3.1.26.post2
 certifi==2019.9.11
+decorator==4.4.1
 defusedxml==0.6.0
 diff-match-patch==20181111
 Django==1.11.18
@@ -24,17 +26,27 @@ docopt==0.6.2
 dominate==2.1.17
 et-xmlfile==1.0.1
 idna==2.8
+ipython==7.9.0
+ipython-genutils==0.2.0
 isort==4.3.21
 jdcal==1.4.1
+jedi==0.15.1
 kombu==3.0.37
 lazy-object-proxy==1.4.2
 MarkupPy==1.14
 mccabe==0.6.1
+mistune==0.8.4
 odfpy==1.4.0
 openpyxl==3.0.0
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
 Pillow==6.2.1
 progressbar2==3.47.0
+prompt-toolkit==2.0.10
+ptyprocess==0.6.0
 pycodestyle==2.5.0
+Pygments==2.4.2
 pylint==2.4.3
 PyMySQL==0.9.3
 python-utils==2.3.0
@@ -45,7 +57,9 @@ simpleui==3.2
 six==1.12.0
 sqlparse==0.3.0
 tablib==0.14.0
+traitlets==4.3.3
 typed-ast==1.4.0
+wcwidth==0.1.7
 wrapt==1.11.2
 xlrd==1.2.0
 xlwt==1.3.0
